refactor: fix print status fragment displaying

--- a/app/src/main/res/layout/fragment_print_status.xml
+++ b/app/src/main/res/layout/fragment_print_status.xml
@@ -14,7 +14,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="Connected to"
+        android:text="@string/connected_to"
         app:layout_constraintBottom_toTopOf="@id/label_state"
         app:layout_constraintEnd_toStartOf="@id/text_host"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="State:"
+        android:text="@string/state"
         app:layout_constraintBottom_toTopOf="@id/label_file"
         app:layout_constraintEnd_toStartOf="@id/text_state"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="File:"
+        android:text="@string/file"
         app:layout_constraintBottom_toTopOf="@id/label_user"
         app:layout_constraintEnd_toStartOf="@id/text_file"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="User:"
+        android:text="@string/user"
         app:layout_constraintBottom_toTopOf="@id/label_timelapse"
         app:layout_constraintEnd_toStartOf="@id/text_user"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="Timelapse:"
+        android:text="@string/timelapse"
         app:layout_constraintBottom_toTopOf="@id/label_approx_total_time"
         app:layout_constraintEnd_toStartOf="@id/text_timelapse"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,7 +146,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        tools:text="Approx. Total Print Time: :"
+        android:text="@string/approx_total_print_time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/text_approx_total_time"
         app:layout_constraintStart_toStartOf="parent"
