--- a/app/src/main/res/layout/fragment_print_status.xml
+++ b/app/src/main/res/layout/fragment_print_status.xml
@@ -68,7 +68,7 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:text="@string/file"
-        app:layout_constraintBottom_toTopOf="@id/label_user"
+        app:layout_constraintBottom_toTopOf="@id/label_message"
         app:layout_constraintEnd_toStartOf="@id/text_file"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_state" />
@@ -80,7 +80,7 @@
         android:textAlignment="center"
         android:textSize="20sp"
         tools:text="bigfile.gcode"
-        app:layout_constraintBottom_toTopOf="@id/text_user"
+        app:layout_constraintBottom_toTopOf="@id/text_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_file"
         app:layout_constraintTop_toBottomOf="@id/text_state" />
@@ -88,28 +88,28 @@
 
 
     <TextView
-        android:id="@+id/label_user"
+        android:id="@+id/label_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/user"
+        android:text="Message:"
         app:layout_constraintBottom_toTopOf="@id/label_timelapse"
-        app:layout_constraintEnd_toStartOf="@id/text_user"
+        app:layout_constraintEnd_toStartOf="@id/text_message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_file" />
 
     <TextView
-        android:id="@+id/text_user"
+        android:id="@+id/text_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:text="printuser"
+        tools:text="Some message"
         app:layout_constraintBottom_toTopOf="@id/text_timelapse"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/label_user"
+        app:layout_constraintStart_toEndOf="@id/label_message"
         app:layout_constraintTop_toBottomOf="@id/text_file" />
 
 
@@ -124,7 +124,7 @@
         app:layout_constraintBottom_toTopOf="@id/label_approx_total_time"
         app:layout_constraintEnd_toStartOf="@id/text_timelapse"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_user" />
+        app:layout_constraintTop_toBottomOf="@id/label_message" />
 
     <TextView
         android:id="@+id/text_timelapse"
@@ -136,7 +136,7 @@
         app:layout_constraintBottom_toTopOf="@id/text_approx_total_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_timelapse"
-        app:layout_constraintTop_toBottomOf="@id/text_user" />
+        app:layout_constraintTop_toBottomOf="@id/text_message" />
 
 
     <TextView
