--- a/app/src/main/res/layout/fragment_print_status.xml
+++ b/app/src/main/res/layout/fragment_print_status.xml
@@ -4,30 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:padding="16dp"
     tools:context=".ui.print_status.PrintStatusFragment">
 
     <TextView
         android:id="@+id/label_host"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/connected_to"
-        app:layout_constraintBottom_toTopOf="@id/label_state"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/print_status_connected_to"
         app:layout_constraintEnd_toStartOf="@id/text_host"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_host"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
         tools:text="127.0.0.1:8080"
-        app:layout_constraintBottom_toTopOf="@id/text_state"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_host"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,25 +35,25 @@
 
     <TextView
         android:id="@+id/label_state"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/state"
-        app:layout_constraintBottom_toTopOf="@id/label_file"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/print_status_state"
         app:layout_constraintEnd_toStartOf="@id/text_state"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_host" />
 
     <TextView
         android:id="@+id/text_state"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         tools:text="Printing"
-        app:layout_constraintBottom_toTopOf="@id/text_file"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_state"
         app:layout_constraintTop_toBottomOf="@id/text_host" />
@@ -62,25 +62,25 @@
 
     <TextView
         android:id="@+id/label_file"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/file"
-        app:layout_constraintBottom_toTopOf="@id/label_message"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/print_status_file"
         app:layout_constraintEnd_toStartOf="@id/text_file"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_state" />
 
     <TextView
         android:id="@+id/text_file"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         tools:text="bigfile.gcode"
-        app:layout_constraintBottom_toTopOf="@id/text_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_file"
         app:layout_constraintTop_toBottomOf="@id/text_state" />
@@ -89,79 +89,79 @@
 
     <TextView
         android:id="@+id/label_message"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="Message:"
-        app:layout_constraintBottom_toTopOf="@id/label_timelapse"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/print_status_message"
         app:layout_constraintEnd_toStartOf="@id/text_message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_file" />
 
     <TextView
         android:id="@+id/text_message"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         tools:text="Some message"
-        app:layout_constraintBottom_toTopOf="@id/text_timelapse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/label_message"
         app:layout_constraintTop_toBottomOf="@id/text_file" />
 
 
     <TextView
-        android:id="@+id/label_timelapse"
-        android:layout_width="wrap_content"
+        android:id="@+id/label_time_since_start"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/timelapse"
-        app:layout_constraintBottom_toTopOf="@id/label_approx_total_time"
-        app:layout_constraintEnd_toStartOf="@id/text_timelapse"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/print_status_time_elapsed"
+        app:layout_constraintEnd_toStartOf="@id/text_time_since_start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/label_message" />
 
     <TextView
-        android:id="@+id/text_timelapse"
-        android:layout_width="wrap_content"
+        android:id="@+id/text_time_since_start"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20sp"
-        tools:text="-"
-        app:layout_constraintBottom_toTopOf="@id/text_approx_total_time"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/dash"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/label_timelapse"
+        app:layout_constraintStart_toEndOf="@id/label_time_since_start"
         app:layout_constraintTop_toBottomOf="@id/text_message" />
 
 
     <TextView
-        android:id="@+id/label_approx_total_time"
-        android:layout_width="wrap_content"
+        android:id="@+id/label_time_spent_printing"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:text="@string/approx_total_print_time"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/text_approx_total_time"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/print_status_print_time_elapsed"
+        app:layout_constraintEnd_toStartOf="@id/text_time_spent_printing"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_timelapse" />
+        app:layout_constraintTop_toBottomOf="@id/label_time_since_start" />
 
     <TextView
-        android:id="@+id/text_approx_total_time"
-        android:layout_width="wrap_content"
+        android:id="@+id/text_time_spent_printing"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:textSize="20sp"
-        tools:text="-"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/dash"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/label_approx_total_time"
-        app:layout_constraintTop_toBottomOf="@id/text_timelapse" />
+        app:layout_constraintStart_toEndOf="@id/label_time_spent_printing"
+        app:layout_constraintTop_toBottomOf="@id/text_time_since_start" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
