refactor: setup MoonrakerService, remove deprecated PreferenceManager

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,9 +2,9 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
         android:defaultValue="127.0.0.1"
-        android:key="moonraker_ip"
-        android:summary="@string/settings_ip_summary"
-        android:title="@string/settings_ip_title" />
+        android:key="moonraker_host"
+        android:summary="@string/settings_host_summary"
+        android:title="@string/settings_host_title" />
 
     <EditTextPreference
         android:defaultValue="8080"
