--- a/app/src/main/res/layout/fragment_sd_card.xml
+++ b/app/src/main/res/layout/fragment_sd_card.xml
@@ -175,4 +175,15 @@
         app:layout_constraintStart_toEndOf="@id/label_slicer_version"
         app:layout_constraintTop_toBottomOf="@id/text_slicer" />
 
+    <Button
+        android:id="@+id/printButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="@string/print_file"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_slicer_version"
+        app:layout_constraintVertical_bias="0.119" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
