--- a/app/src/main/res/layout/fragment_motors.xml
+++ b/app/src/main/res/layout/fragment_motors.xml
@@ -2,22 +2,341 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/motors_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.motors.MotorsFragment">
 
     <TextView
-        android:id="@+id/text_motors"
-        android:layout_width="match_parent"
+        android:id="@+id/e_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="0.00"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/z_positive_01" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="E:"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/z_positive_01" />
+
+    <Button
+        android:id="@+id/z_negative_100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_100"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/z_label" />
+
+    <Button
+        android:id="@+id/z_positive_01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_01"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/z_negative_100" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Z:"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/y_positive_01" />
+
+    <TextView
+        android:id="@+id/z_label"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="0.00"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/y_positive_01" />
+
+    <Button
+        android:id="@+id/z_negative_01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_01"
+        app:layout_constraintStart_toEndOf="@+id/y_negative_1"
+        app:layout_constraintTop_toBottomOf="@+id/z_label" />
+
+    <Button
+        android:id="@+id/y_negative_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_1"
+        app:layout_constraintStart_toEndOf="@+id/y_negative_10"
+        app:layout_constraintTop_toBottomOf="@+id/z_label" />
+
+    <Button
+        android:id="@+id/z_negative_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_10"
+        app:layout_constraintStart_toEndOf="@+id/y_negative_100"
+        app:layout_constraintTop_toBottomOf="@+id/z_label" />
+
+    <Button
+        android:id="@+id/z_positive_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_10"
+        app:layout_constraintStart_toEndOf="@+id/y_positive_1"
+        app:layout_constraintTop_toBottomOf="@+id/y_negative_3" />
+
+    <Button
+        android:id="@+id/z_positive_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_1"
+        app:layout_constraintStart_toEndOf="@+id/y_positive_01"
+        app:layout_constraintTop_toBottomOf="@+id/z_negative_10" />
+
+    <Button
+        android:id="@+id/z_positive_100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_100"
+        app:layout_constraintStart_toEndOf="@+id/y_positive_10"
+        app:layout_constraintTop_toBottomOf="@+id/z_negative_01" />
+
+    <Button
+        android:id="@+id/y_positive_01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_01"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/y_negative_100" />
+
+    <Button
+        android:id="@+id/y_negative_100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_100"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/y_label" />
+
+    <Button
+        android:id="@+id/y_positive_100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_100"
+        app:layout_constraintStart_toEndOf="@+id/y_positive_10"
+        app:layout_constraintTop_toBottomOf="@+id/y_negative_01" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Y:"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/x_positive_.1" />
+
+    <TextView
+        android:id="@+id/y_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="0.00"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/x_positive_.1" />
+
+    <Button
+        android:id="@+id/y_negative_01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_01"
+        app:layout_constraintStart_toEndOf="@+id/y_negative_1"
+        app:layout_constraintTop_toBottomOf="@+id/y_label" />
+
+    <Button
+        android:id="@+id/y_negative_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_1"
+        app:layout_constraintStart_toEndOf="@+id/y_negative_10"
+        app:layout_constraintTop_toBottomOf="@+id/y_label" />
+
+    <Button
+        android:id="@+id/y_negative_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_10"
+        app:layout_constraintStart_toEndOf="@+id/y_negative_100"
+        app:layout_constraintTop_toBottomOf="@+id/y_label" />
+
+    <Button
+        android:id="@+id/y_positive_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_10"
+        app:layout_constraintStart_toEndOf="@+id/y_positive_1"
+        app:layout_constraintTop_toBottomOf="@+id/y_negative_1" />
+
+    <Button
+        android:id="@+id/y_positive_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_1"
+        app:layout_constraintStart_toEndOf="@+id/y_positive_01"
+        app:layout_constraintTop_toBottomOf="@+id/y_negative_10" />
+
+    <Button
+        android:id="@+id/x_negative_100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_100"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/x_label" />
+
+    <Button
+        android:id="@+id/x_positive_100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_100"
+        app:layout_constraintStart_toEndOf="@+id/x_positive_10"
+        app:layout_constraintTop_toBottomOf="@+id/x_negative_01" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="X:"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/x_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="0.00"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/x_negative_01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_01"
+        app:layout_constraintStart_toEndOf="@+id/x_negative_1"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/x_negative_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_1"
+        app:layout_constraintStart_toEndOf="@+id/x_negative_10"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/x_negative_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/negative_10"
+        app:layout_constraintStart_toEndOf="@+id/x_negative_100"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/x_positive_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_10"
+        app:layout_constraintStart_toEndOf="@+id/x_negative_4"
+        app:layout_constraintTop_toBottomOf="@+id/x_negative_1" />
+
+    <Button
+        android:id="@+id/x_negative_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_1"
+        app:layout_constraintStart_toEndOf="@+id/x_positive_.1"
+        app:layout_constraintTop_toBottomOf="@+id/x_negative_1" />
+
+    <Button
+        android:id="@+id/x_positive_.1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/positive_01"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/x_negative_10" />
 </androidx.constraintlayout.widget.ConstraintLayout>
